# Sun-agent

./: .gitignore  CMakeLists.txt  main  main.cpp  test.cpp  test1.py
conf/: eval.sample  search.sql  train.sample
filters/: filters.yml
include/agent/: event.h  parser.h  process.h  saver.h  tools.h
include/elasticlient/: bulk.h  client.h
include/json/: config.h  value.h  writer.h
include/py/: python.h
lib/: libcpr.so.1  libelasticlient.so.2  libjsoncpp.so.1.8.4
src/: event.cpp  parser.cpp  process.cpp
